Implemented URL shortening setvice
Fully implemented URL shortener microservice

--- a/LMSystem/LMSystemUI/Pages/AddClientToProject.razor
+++ b/LMSystem/LMSystemUI/Pages/AddClientToProject.razor
@@ -7,6 +7,8 @@
 @inject ProtectedSessionStorage sessionStorage
 @inject IJSRuntime JsRuntime
 
+@inject IToastService toastService
+
 <h1 class="page-heading text-uppercase mb-4">Add Client for @project.ProjectTitle:</h1>
 <button @onclick="(() => ClosePage())">Close Page</button>
 <br />
@@ -27,7 +29,7 @@
                         <div>Address: @s.ClientAddress</div>
                         <div>Phone: @s.ClientPhoneNumber</div>
                         <div>
-                            <button class="new-object-button" @onclick="(() => AddClient(s))">Add Client</button>
+                            <button class="new-object-button" @onclick="@(() => { AddClient(s); toastService.ShowSuccess($"{s.FirstName} {s.LastName} was assigned to {project.ProjectTitle}!"); })">Add Client</button>
                         </div>
                     </fieldset>
                 </form>
