--- a/LMSystem/LMSystemUI/Pages/CreateItem.razor
+++ b/LMSystem/LMSystemUI/Pages/CreateItem.razor
@@ -13,7 +13,7 @@
             <EditForm Model="item" OnValidSubmit="CreateNewItem">
                 <DataAnnotationsValidator />
                 <ValidationSummary />
-                <table class="invoice-tems-table">
+                <table class="invoice-items-table">
                     <tbody>
                         <tr>
                             <td>Item Name:</td>
