--- a/LMSystem/LMSystemUIPublic/wwwroot/css/site.css
+++ b/LMSystem/LMSystemUIPublic/wwwroot/css/site.css
@@ -1,135 +1,11 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,900;1,700;1,900&display=swap');
 
 html, body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 19px;
-    background-color: #282c34;
-    color: #FFFFFF;
-}
-
-.modal-title-2 {
-    color: #282c34;
-}
-
-.modal-mine {
-    color: #282c34;
-}
-
-h1, h2, h3, h4, h5 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: #FFFFFF;
-    padding-top: 1rem;
-}
-
-.details-heading {
-    color: #282c34;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1:focus {
     outline: none;
-}
-
-body {
-    background-color: #282c34;
-    color: #FFFFFF;
-}
-
-.page-heading {
-    padding: 20px;
-    margin: 20px;
-    text-align: left;
-}
-
-.notification-bar {
-    border-style: solid;
-    border-width: 1px;
-    border-color: #61dafb;
-    border-radius: 25px;
-    padding: 15px;
-    margin: 6px;
-    text-align: left;
-}
-
-.description-and-search-bar {
-    padding: 10px;
-    padding-bottom: 15px;
-    margin: 5px;
-    text-align: left;
-}
-
-.result {
-    padding: 10px;
-    padding-bottom: 15px;
-    margin: 5px;
-    text-align: left;
-}
-
-.result-card {
-    background-color: #FFFFFF;
-    border-style: none;
-    border-radius: 5px;
-    color: #282c34;
-    padding: 15px;
-    margin: 5px;
-}
-
-.card-link {
-    cursor:grab;
-}
-
-.new-object-button {
-    padding:5px;
-    margin-top: 10px;
-}
-
-.element-details {
-    background-color: #FFFFFF;
-    border-style: none;
-    border-radius: 5px;
-    color: #282c34;
-    padding: 15px;
-    margin: 5px;
-}
-
-.edit-element-details {
-    padding:5px;
-    margin: 2px;
-}
-
-.edit-element-button {
-    margin-top: 10px;
-}
-
-.remove-item-button {
-    margin: 5px;
-}
-
-.invoice-items-table {
-    width: 50%;
-}
-
-.invoice-items-table-wide {
-    width: 100%;
-}
-
-.item-table {
-    width: 100%;
-}
-
-tr, td, th {
-    padding: 10px;
-    text-align: left;
-}
-
-.table-body {
-    font-weight: normal;
-}
-
-.table-button {
-    text-align: center;
 }
 
 a, .btn-link {
