--- a/LMSystem/LMSystemUI/Pages/CreateClient.razor
+++ b/LMSystem/LMSystemUI/Pages/CreateClient.razor
@@ -5,6 +5,8 @@
 @inject IMongoClientData clientData
 @inject NavigationManager navManager
 
+@inject IToastService toastService
+
 <h3>New Client:</h3>
 <div>
     <div>
@@ -12,31 +14,34 @@
             <EditForm Model="client" OnValidSubmit="CreateNewClient">
                 <DataAnnotationsValidator />
                 <ValidationSummary />
-                        <div>
-                            <label for="client-first">First Name:</label>
-                            <InputText id="client-first" @bind-Value="client.FirstName" />
-                        </div>
-                        <div>
-                            <label for="client-last">Last Name:</label>
-                            <InputText id="client-last" @bind-Value="client.LastName" />
-                        </div>
-                        <div>
-                            <label for="client-address">Address:</label>
-                            <br />
-                            <InputTextArea id="client-address" @bind-Value="client.ClientAddress" />
-                        </div>
-                        <div>
-                            <label for="client-phone">Phone:</label>
-                            <InputText id="client-phone" @bind-Value="client.ClientPhoneNumber" />
-                        </div>
-                        <div>
-                            <label for="client-email">Email:</label>
-                            <InputText id="client-email" @bind-Value="client.ClientEMail" />
-                        </div>
-                        <br />
-                        <div>
-                            <button type="submit">Create New Client</button>
-                        </div>
+
+                <table class="invoice-items-table">
+                    <tbody>
+                        <tr>
+                            <td>First Name:</td>
+                            <td><InputText id="client-first" @bind-Value="client.FirstName" /></td>
+                        </tr>
+                        <tr>
+                            <td>Last Name:</td>
+                            <td><InputText id="client-last" @bind-Value="client.LastName" /></td>
+                        </tr>
+                        <tr>
+                            <td>Address:</td>
+                            <td><InputTextArea id="client-address" rows="3" cols="21" @bind-Value="client.ClientAddress" /></td>
+                        </tr>
+                        <tr>
+                            <td>Phone Number:</td>
+                            <td><InputText id="client-phone" @bind-Value="client.ClientPhoneNumber" /></td>
+                        </tr>
+                        <tr>
+                            <td>Email:</td>
+                            <td><InputText id="client-email" @bind-Value="client.ClientEMail" /></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><button type="submit">Create New Client</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </EditForm>
         </div>
     </div>
@@ -47,6 +52,8 @@
 
     private async Task CreateNewClient()
     {
+        toastService.ShowSuccess($"{client.FirstName} {client.LastName} was added!");
+
         ClientModel s = new();
         s.FirstName = client.FirstName;
         s.LastName = client.LastName;
