--- a/LMSystem/LMSystemUI/Pages/CreateInvoice.razor
+++ b/LMSystem/LMSystemUI/Pages/CreateInvoice.razor
@@ -5,6 +5,8 @@
 @inject IMongoUserData userData
 @inject NavigationManager navManager
 
+@inject IToastService toastService
+
 <h3>Create New Invoice:</h3>
 <br />
 <div>
@@ -13,23 +15,25 @@
             <EditForm Model="invoice" OnValidSubmit="CreateNewInvoice">
                 <DataAnnotationsValidator />
                 <ValidationSummary />
-                <div>
-                    <label for="invoice-title-text">
-                        Title: <InputText id="invoice-title-text" @bind-Value="invoice.InvoiceTitle" />
-                    </label>
-                </div>
-                <div>
-                    <label for="invoice-number-text">Number: </label>
-                    <InputText id="invoice-number-text" @bind-Value="invoice.InvoiceNumber" />
-                </div>
-                <div>
-                    <label for="invoice-status-text">Status: </label>
-                    <InputText id="invoice-status-text" @bind-Value="invoice.InvoiceStatus" />
-                </div>
-                <br />
-                <div>
-                    <button type="submit">Create New Invoice</button>
-                </div>
+                <table class="invoice-items-table">
+                    <tbody>
+                        <tr>
+                            <td>Invoice Title:</td>
+                            <td><InputText id="invoice-title-text" @bind-Value="invoice.InvoiceTitle" /></td>
+                        </tr>
+                        <tr>
+                            <td>Number:</td>
+                            <td><InputText id="invoice-number-text" @bind-Value="invoice.InvoiceNumber" /></td>
+                        </tr>
+                        <tr>
+                            <td>Status:</td>
+                            <td><InputText id="invoice-status-text" @bind-Value="invoice.InvoiceStatus" /></td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2"><button type="submit">Create New Invoice</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </EditForm>
         </div>
     </div>
@@ -42,6 +46,8 @@
 
     private async Task CreateNewInvoice()
     {
+        toastService.ShowSuccess($"{invoice.InvoiceTitle} was created!");
+
         InvoiceModel s = new();
 
         //TODO: Replace with User lookup once login implemented
