--- a/LMSystem/LMSystemUI/Pages/Items.razor
+++ b/LMSystem/LMSystemUI/Pages/Items.razor
@@ -14,28 +14,40 @@
         <button class="new-object-button" @onclick="CreateNewItem">Create New Item</button>
     </div>
 </div>
-<div class="result">
-    <div>
+<div>
+    <div class="result-card">
         @if (items is not null)
-        {
-            <Virtualize Items="@items" Context="s" OverscanCount="10">
-                <form class="result-card">
-                    <fieldset>
-                        <div @onclick="(() => OpenItemDetails(s))">Name: <a class="card-link">@s.ItemName</a></div>
-                        <div>Description: @s.ItemDescription</div>
-                        <div>Price: $@s.Price/each</div>
-                        @if(s.QuantityInStock > 0)
-                         {
-                            <div>In Stock: @s.QuantityInStock</div>
-                         }
-                        @if(s.QuantityInStock == 0)
-                         {
-                            <div>Not available in the warehouse</div>
-                         }
-                    </fieldset>
-                </form>
-            </Virtualize>
-        }
+         {
+            <div class="table">
+            <table class="invoice-items-table-wide">
+                <thead class="table-header">
+                    <tr>
+                        <th>Item Name</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th>Quantity In Stock</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <Virtualize Items="@items" Context="s" OverscanCount="10">
+                        <tr>
+                            <td><a class="card-link" @onclick="(() => OpenItemDetails(s))">@s.ItemName</a></td>
+                            <td>@s.ItemDescription</td>
+                            <td>$@s.Price</td>
+                            @if (s.QuantityInStock > 0)
+                            {
+                                <td>@s.QuantityInStock</td>
+                            }
+                            @if (s.QuantityInStock == 0)
+                            {
+                                <td>Not available in the warehouse</td>
+                            }
+                        </tr>
+                    </Virtualize>
+                </tbody>
+            </table>
+            </div>
+         }
     </div>
 </div>
 
