--- a/LMSystem/LMSystemUI/Pages/CreateInvoice.razor
+++ b/LMSystem/LMSystemUI/Pages/CreateInvoice.razor
@@ -30,7 +30,8 @@
                             <td><InputText id="invoice-status-text" @bind-Value="invoice.InvoiceStatus" /></td>
                         </tr>
                         <tr>
-                            <td rowspan="2"><button type="submit">Create New Invoice</button></td>
+                            <td>   </td>
+                            <td rowspan="2"><button class="btn btn-primary" type="submit">Create New Invoice</button></td>
                         </tr>
                     </tbody>
                 </table>
