--- a/LMSystem/LMSystemUI/Pages/CreateProject.razor
+++ b/LMSystem/LMSystemUI/Pages/CreateProject.razor
@@ -34,7 +34,8 @@
                             <td><InputText id="project-status-text" @bind-Value="project.ProjectStatus" /></td>
                         </tr>
                         <tr>
-                            <td><button type="submit">Create New Project</button></td>
+                            <td>   </td>
+                            <td><button class="btn btn-primary" type="submit">Create New Project</button></td>
                         </tr>
                     </tbody>
                 </table>
