--- a/LMSystem/LMSystemUI/Pages/Items.razor
+++ b/LMSystem/LMSystemUI/Pages/Items.razor
@@ -11,7 +11,7 @@
            aria-label="Search box"
            @oninput="((txt) => OnSearchInput((string)txt.Value))" />
     <div>
-        <button class="new-object-button" @onclick="CreateNewItem">Create New Item</button>
+        <button class="btn btn-primary" @onclick="CreateNewItem">Create New Item</button>
     </div>
 </div>
 <div>
