--- a/LMSystem/LMSystemUI/Pages/Projects.razor
+++ b/LMSystem/LMSystemUI/Pages/Projects.razor
@@ -12,7 +12,7 @@
            @oninput="((txt) => OnSearchInput((string)txt.Value))" />
     
     <div>
-        <button class="new-object-button" @onclick="(() => CreateProject())">Create New Project</button>
+        <button class="btn btn-primary" @onclick="(() => CreateProject())">Create New Project</button>
     </div>
 </div>
 <div class="result">
