--- a/LMSystem/LMSystemUI/Pages/ClientDetails.razor
+++ b/LMSystem/LMSystemUI/Pages/ClientDetails.razor
@@ -2,6 +2,8 @@
 
 @inject IMongoClientData clientData
 @inject NavigationManager navManager
+@inject IJSRuntime JS
+@inject IToastService toastService
 
 <h2 class="page-heading">Client Details:</h2>
 <div class="element-details">
@@ -15,7 +17,7 @@
             </EditForm>
             <EditForm class="edit-element-details" Model="@editedLastName" OnSubmit="(() => SaveName(client))">
                 Last Name: <InputText @bind-Value="editedLastName" />
-                <br/>
+                <br />
                 <button class="edit-element-button" type="submit">
                     <span class="oi oi-check"></span>
                 </button>
@@ -35,7 +37,7 @@
         {
             <EditForm class="edit-element-details" Model="@editedAddress" OnSubmit="(() => SaveAddress(client))">
                 Address: <InputText size="75" @bind-Value="editedAddress" />
-                <br/>
+                <br />
                 <button class="edit-element-button" type="submit">
                     <span class="oi oi-check"></span>
                 </button>
@@ -55,7 +57,7 @@
         {
             <EditForm class="edit-element-details" Model="@editedPhone" OnSubmit="(() => SavePhoneNumber(client))">
                 Phone: <InputText @bind-Value="editedPhone" />
-                <br/>
+                <br />
                 <button class="edit-element-button" type="submit">
                     <span class="oi oi-check"></span>
                 </button>
@@ -75,7 +77,7 @@
         {
             <EditForm class="edit-element-details" Model="@editedEmail" OnSubmit="(() => SaveEmail(client))">
                 Email: <InputText @bind-Value="editedEmail" />
-                <br/>
+                <br />
                 <button class="edit-element-button" type="submit">
                     <span class="oi oi-check"></span>
                 </button>
@@ -90,14 +92,41 @@
                 Email: @client.ClientEMail <span class="oi oi-pencil" @onclick="(() => EditEmail(client))" />
             </div>
         }
+
     }
+    <br/>
+    <br/>
+    <div>
+        <button class="btn btn-danger" ata-toggle="modal" data-target="#exampleModalCenter" @onclick='eventArgs => { ShowModal("exampleModalCenter"); ClientToRemoveUpdate(client); }'>Delete Client</button>
+    </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade show" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="display:none; background: 00000080;">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title-2" color: #282c34 id="exampleModalLongTitle">Warning</h5>
+                <button @onclick='eventArgs => HideModal("exampleModalCenter")' type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p class="modal-mine">Are you sure you want to delete this client?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" @onclick='eventArgs => HideModal("exampleModalCenter")' class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" @onclick='eventArgs => { HideModal("exampleModalCenter"); ConfirmRemove(); }'>Remove</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
     [Parameter]
     public string Id { get; set; }
     private ClientModel client;
+    private ClientModel clientToRemove = new();
 
     private ClientModel editingClientModel;
     private string currentFirstName = "";
@@ -115,6 +144,54 @@
     protected override async Task OnInitializedAsync()
     {
         client = await clientData.GeClientAsync(Id);
+    }
+
+    private IJSObjectReference module;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender == null)
+        {
+            module = await JS.InvokeAsync<IJSObjectReference>("import", "./Pages/ClientDetails.razor.js");
+        }
+    }
+
+    protected async void ShowModal(string elementId)
+    {
+        if (module != null)
+        {
+            await module.InvokeAsync<string>("showModal", elementId);
+        }
+        else
+        {
+            module = await JS.InvokeAsync<IJSObjectReference>("import", "./Pages/ClientDetails.razor.js");
+            await module.InvokeAsync<string>("showModal", elementId);
+        }
+    }
+
+    protected async void HideModal(string elementId)
+    {
+        if (module != null)
+        {
+            await module.InvokeAsync<string>("hideModal", elementId);
+        }
+        else
+        {
+            module = await JS.InvokeAsync<IJSObjectReference>("import", "./Pages/ClientDetails.razor.js");
+            await module.InvokeAsync<string>("hideModal", elementId);
+        }
+    }
+
+    private void ClientToRemoveUpdate(ClientModel client)
+    {
+        clientToRemove = client;
+    }
+
+    private void ConfirmRemove()
+    {
+        
+        toastService.ShowWarning($"{clientToRemove.FirstName} {clientToRemove.LastName }was removed!");
+        DeleteClient(clientToRemove);
     }
 
     private void EditName(ClientModel client)
@@ -194,6 +271,12 @@
         currentEmail = String.Empty;
         client.ClientEMail = editedEmail;
         await clientData.UpdateClient(client);
+    }
+
+    private void DeleteClient(ClientModel client)
+    {
+        clientData.DeleteClient(client);
+        navManager.NavigateTo("/clients");
     }
 }
 
