--- a/LMSystem/LMSystemUI/Pages/Clients.razor
+++ b/LMSystem/LMSystemUI/Pages/Clients.razor
@@ -12,7 +12,7 @@
            aria-label="Search box"
            @oninput="((txt) => OnSearchInput((string)txt.Value))" />
     <div>
-        <button class="new-object-button" @onclick="CreateNewItem">Create New Client</button>
+        <button class="btn btn-primary" @onclick="CreateNewItem">Create New Client</button>
     </div>
 </div>
 <div class="result"> 
