--- a/LMSystem/LMSystemUI/Pages/CreateClient.razor
+++ b/LMSystem/LMSystemUI/Pages/CreateClient.razor
@@ -38,7 +38,8 @@
                             <td><InputText id="client-email" @bind-Value="client.ClientEMail" /></td>
                         </tr>
                         <tr>
-                            <td colspan="2"><button type="submit">Create New Client</button></td>
+                            <td>   </td>
+                            <td colspan="2"><button type="submit" class="btn btn-primary">Create New Client</button></td>
                         </tr>
                     </tbody>
                 </table>
