--- a/LMSystem/LMSystemUI/Pages/InvoiceDetails.razor
+++ b/LMSystem/LMSystemUI/Pages/InvoiceDetails.razor
@@ -17,8 +17,9 @@
         <br />
         <div>Total: $@invoice.Total</div>
         <div><h3 class="details-heading">Items:</h3></div>
-        <button @onclick="(() => AddItemsToInvoice(invoice.Id))">Add Items</button>
-        <button>Create New Item</button>
+        <button class="btn btn-primary" @onclick="(() => AddItemsToInvoice(invoice.Id))">Add Items</button>
+        <button class="btn btn-primary" @onclick="(() => CreateItemForInvoice(invoice.Id))">Create New Item</button>
+        <button class="btn btn-danger" data-toggle="modal" data-target="#exampleModalCenter" @onclick='eventArgs => { ShowModal("exampleModalCenter2"); InvoiceToRemoveUpdate(invoice); }'>Delete Invoice</button>
         <br />
         @if (invoice.Items is not null)
         {
@@ -76,6 +77,26 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade show" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="display:none; background: 00000080;">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title-2" color: #282c34 id="exampleModalLongTitle">Warning</h5>
+                <button @onclick='eventArgs => HideModal("exampleModalCenter")' type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p class="modal-mine">Are you sure you want to delete this invoice?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" @onclick='eventArgs => HideModal("exampleModalCenter")' class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" @onclick='eventArgs => { HideModal("exampleModalCenter"); ConfirmRemoveInvoice(); }'>Remove</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 @code {
@@ -83,6 +104,7 @@
     public string Id { get; set; }
     private InvoiceModel invoice;
     private ItemModel itemToRemove = new();
+    private InvoiceModel invoiceToRemove = new();
 
     private bool DeleteDialogOpen { get; set; }
 
@@ -96,6 +118,10 @@
         navManager.NavigateTo($"/additemstoinvoice/{id}");
     }
 
+    private void CreateItemForInvoice(string id)
+    {
+        navManager.NavigateTo($"/createitem/{id}");
+    }
 
     private IJSObjectReference module;
 
@@ -138,9 +164,26 @@
         itemToRemove = item;
     }
 
-    private void ConfirmRemove()
+    private void InvoiceToRemoveUpdate(InvoiceModel invoice)
     {
+        invoiceToRemove = invoice;
+    }
+
+    private async Task ConfirmRemove()
+    {
+        var total = float.Parse(invoice.Total);
+        var newTotal = total - float.Parse(itemToRemove.Price);
+        invoice.Total = newTotal.ToString("0.00");
+        invoice.Items.Remove(itemToRemove);
         toastService.ShowWarning($"{itemToRemove.ItemName} was removed!");
+        await invoiceData.UpdateInvoice(invoice);
+    }
+
+    private void ConfirmRemoveInvoice()
+    {
+        invoiceData.DeleteInvoice(invoiceToRemove);
+        toastService.ShowWarning($"{invoiceToRemove.InvoiceTitle} was deleted!");
+        navManager.NavigateTo("/invoices");
     }
 }
 
